--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ asgiref==3.8.1
 Brotli==1.1.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
+dj-database-url==2.2.0
 Django==5.1.1
 django-environ==0.11.2
 djangorestframework==3.15.2
@@ -13,14 +14,12 @@ et-xmlfile==1.1.0
 gunicorn==23.0.0
 idna==3.10
 inflection==0.5.1
-numpy==2.1.1
 openpyxl==3.1.5
 packaging==24.1
-pandas==2.2.3
+psycopg2-binary==2.9.9
 pydantic==2.9.2
 pydantic_core==2.23.4
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
 pytz==2024.2
 PyYAML==6.0.2
 requests==2.32.3
